--- a/aprosys/aprosys/static/css/style.css
+++ b/aprosys/aprosys/static/css/style.css
@@ -1,12 +1,3 @@
-/* style.css */
-
-/* Reset básico */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 :root {
     --bg-color-light: #F5F5F5; /* Cor de fundo clara */
     --bg-color-containers: #ffffff; /* Cor de fundo dos containers */
@@ -23,7 +14,19 @@
     --grey-dark: #333; /* Cinza escuro */
     --grey-medium: #999; /* Cinza médio */
     --grey-light: #f3f3f3; /* Cinza claro */
+    --cancel-color: #ec221f; /* Cor de cancelar/excluir */
+    --delete-color: #ec221f; /* Cor de excluir */
 }
+
+/* style.css */
+
+/* Reset básico */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 
 /* --------------------------------------------------
                     GLOBAL
